<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">M-AFI</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="logout">Logout</string>
    <string name="noufal_ibrahim">Noufal Ibrahim</string>
    <string name="_1603080">1603080</string>
    <string name="kelas">Kelas :</string>
    <string name="nama">Nama :</string>
    <string name="d3ti2c">D3TI2C</string>
    <string name="mobile_attendance_fingerprint">Mobile-Attendance Fingerprint</string>
    <string name="masuk">MASUK</string>
    <string name="pulang">PULANG</string>
    <string name="_06_48">06:48</string>
    <string name="pulang_lebih_cepat">* Pulang lebih cepat</string>
    <string name="_20_02_2018" tools:ignore="TypographyDashes">20 - 02 - 2018</string>
    <string name="izin_siswa">Izin Siswa</string>
    <string name="_15_20">15 : 20</string>
    <string name="tepat_waktu">* Tepat waktu</string>
</resources>
